--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ JWT_SECRET_KEY=hard_to_guess_secret_key
 JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
 
+# User Documents Configuration
+USER_FOLDER_SALT=OrientaTech_2024_SecureSalt_UserDocs
+MAX_FILE_SIZE_MB=5
+MAX_FILES_PER_USER=10
+ALLOWED_FILE_TYPES=pdf,doc,docx
+
 # Groq API Configuration (for future ML features)
 GROQ_API_KEY=your_groq_api_key_here
 
