--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ pgvector==0.2.4
 # === Autenticacion y Seguridad ===
 PyJWT==2.8.0
 passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 
 # === Utilidades Web ===
 python-multipart==0.0.6
@@ -42,7 +43,7 @@ protobuf==3.20.3
 
 # === Document Processing ===
 PyPDF2==3.0.1
-PyMuPDF==1.24.0
+PyMuPDF==1.23.14
 python-docx==1.1.0
 pdfplumber==0.11.0
 spacy==3.7.2
