fix(docker): remove public/ from .dockerignore

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -22,10 +22,10 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /app
 
 # Copy requirements
-COPY requirements.txt .
+COPY requirements-optimized.txt .
 
 # Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements-optimized.txt
 
 # Copy application code
 COPY . .
